Fix product list dealignment on responsive

--- a/assets/css/bettina.css
+++ b/assets/css/bettina.css
@@ -594,7 +594,6 @@ footer div > .widget{
 .product-image-frame{
 	position: relative;
 	padding-bottom: 50px;
-    min-height: 710px;
 }
 .product-image-frame:hover .product-price .price .amount, .product-title a{
 	display: inline;
@@ -951,6 +950,9 @@ article.status-fik_checkout{
 	.fm-sidebar .widget .menu li:last-child{
 		text-align: left !important ;
 	}
+    .product-image-frame{
+        min-height: 710px;
+    }
 }
 
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
